--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -6,7 +6,7 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 models:
   hubspot_source:
     +materialized: table
-    +schema: stg_hubspot
+#    +schema: stg_hubspot
     tmp:
       +materialized: view
       stg_hubspot__company_property_history_tmp:
