--- a/models/src_hubspot.yml
+++ b/models/src_hubspot.yml
@@ -3,7 +3,8 @@ version: 2
 sources:
   - name: hubspot
     schema: "{{ var('hubspot_schema', 'hubspot') }}"
-    database: "{{ var('hubspot_database', target.database) }}"
+#    database: "{{ var('hubspot_database', target.database) }}"
+    database: "{{ var('hubspot_database') }}"
     loader: Fivetran
     loaded_at_field: _fivetran_synced
     tables:
