--- a/models/src_hubspot.yml
+++ b/models/src_hubspot.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: hubspot
-    schema: "{{ var('hubspot_schema', 'hubspot') }}"
+#    schema: "{{ var('hubspot_schema', 'hubspot') }}"
 #    database: "{{ var('hubspot_database', target.database) }}"
     database: "{{ var('hubspot_database') }}"
     loader: Fivetran
