update to contact fields.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -252,7 +252,7 @@ vars:
       {name: "PROPERTY_CREATEDATE", alias: "Contact_Created_Date"},
       {name: "PROPERTY_HS_MARKETABLE_STATUS", alias: "Contact_Marketable_Status"},
       {name: "PROPERTY_HS_EMAIL_OPTOUT", alias: "Contact_Opt_Out_Status"},
-      {name: "PROPERTY_leadsource", alias: "Contact_Lead_Source"},
+      {name: "PROPERTY_LEADSOURCE", alias: "Contact_Lead_Source"},
       {name: "PROPERTY_LEAD_SOURCE_DETAIL_C", alias: "Contact_Lead_Source_Detail"},
       {name: "PROPERTY_MQL_DATE", alias: "Contact_MQL_Date"},
       {name: "PROPERTY_COUNTRY", alias: "Contact_Country"}
