Update to contacts.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -284,7 +284,7 @@ vars:
       {name: "PROPERTY_SALESFORCECAMPAIGNIDS", alias: "Contact_Salesforce_Campaign_IDs"},
       {name: "PROPERTY_LEADSTATUS", alias: "Contact_Lead_Status"},
       {name: "PROPERTY_SUB_STATUS", alias: "Contact_Sub_Status"},
-      {name: "PROPERTY_LIFECYCLESTAGE, alias: "Contact_Lifecycle_Stage"}
+      {name: "PROPERTY_LIFECYCLESTAGE", alias: "Contact_Lifecycle_Stage"}
       ]
     hubspot__company_pass_through_columns: []
     hubspot__ticket_pass_through_columns: []
