--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -286,7 +286,8 @@ vars:
       {name: "PROPERTY_SUB_STATUS", alias: "Contact_Sub_Status"},
       {name: "PROPERTY_LIFECYCLESTAGE", alias: "Contact_Lifecycle_Stage"},
       {name: "PROPERTY_SALESFORCEACCOUNTID", alias: "Contact_Salesforce_Account_ID"},
-      {name: "PROPERTY_SALESFORCECONTACTID", alias: "Contact_Salesforce_Contact_ID"}
+      {name: "PROPERTY_SALESFORCECONTACTID", alias: "Contact_Salesforce_Contact_ID"},
+      {name: "PROPERTY_SALESFORCELEADID", alias: "Contact_Salesforce_Lead_ID"}
       ]
     hubspot__company_pass_through_columns: []
     hubspot__ticket_pass_through_columns: []
