--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,2 @@
 packages:
-- package: fivetran/fivetran_utils
-  version: [">=0.3.0", "<0.4.0"]
+- git: https://github.com/codydsellers/fivetran_utils.git
